--- a/package.json
+++ b/package.json
@@ -14,7 +14,18 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/history": "^0.19.2",
+    "@codemirror/lang-javascript": "^0.19.7",
+    "@codemirror/lang-markdown": "^0.19.6",
+    "@codemirror/commands": "^0.19.6",
+    "@codemirror/language": "^0.19.8",
+    "@codemirror/language-data": "^0.19.2",
+    "@codemirror/matchbrackets": "^0.19.4",
+    "@codemirror/state": "^0.19.9",
+    "@codemirror/view": "^0.19.47"
   },
   "scripts": {
     "start": "react-scripts start",
