--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@codemirror/commands": "^0.19.6",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/history": "^0.19.2",
+    "@codemirror/lang-javascript": "^0.19.7",
+    "@codemirror/lang-markdown": "^0.19.6",
+    "@codemirror/language": "^0.19.8",
+    "@codemirror/language-data": "^0.19.2",
+    "@codemirror/matchbrackets": "^0.19.4",
+    "@codemirror/state": "^0.19.9",
+    "@codemirror/view": "^0.19.47",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,22 +24,12 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
-    "@codemirror/gutter": "^0.19.9",
-    "@codemirror/highlight": "^0.19.7",
-    "@codemirror/history": "^0.19.2",
-    "@codemirror/lang-javascript": "^0.19.7",
-    "@codemirror/lang-markdown": "^0.19.6",
-    "@codemirror/commands": "^0.19.6",
-    "@codemirror/language": "^0.19.8",
-    "@codemirror/language-data": "^0.19.2",
-    "@codemirror/matchbrackets": "^0.19.4",
-    "@codemirror/state": "^0.19.9",
-    "@codemirror/view": "^0.19.47"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
